# NumeroAstronomico

./: .gitignore  CMakeLists.txt  NumeroAstronomico.c  NumeroAstronomico.h  README.md  main.c
header/: NumeroAstronomico.h  aritm_op.h  creacion_op.h  errores.h  op_helper.h  persist.h  salida_op.h  ui_helper.h  utils.h
src/: NumeroAstronomico.c  aritm_op.c  creacion_op.c  errores.c  persistencia_op.c  salida_op.c  utils.c
src/operaciones/: aritm_op.c  creacion_op.c  errores.c  persistencia_op.c  salida_op.c
src/ui/: main.c  op_helper.c  ui_helper.c
